# jusMonitor

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD_TODO_REPORT.md  GEMINI.md  NOTIFICATION_SYSTEM_IMPLEMENTATION.md  README.md  SKILL.md  build.sh  dev.sh  docker-compose.prod.yaml  docker-compose.yml  kiro wsl.md  package-lock.json
backend/: .env.example  .env.test  DASHBOARD_IMPLEMENTATION.md  DATABASE_OPTIMIZATION_GUIDE.md  EMBEDDINGS_IMPLEMENTATION.md  GRACEFUL_SHUTDOWN.md  HTTP_COMPRESSION_CACHE.md  OBSERVABILITY_IMPLEMENTATION.md  README.md  SECURITY_IMPLEMENTATION.md  SEED_USAGE.md  TASK_12_IMPLEMENTATION_SUMMARY.md  TASK_24_1_SUMMARY.md  TASK_24_2_IMPLEMENTATION_SUMMARY.md  TASK_24_3_IMPLEMENTATION_SUMMARY.md  TASK_24_4_IMPLEMENTATION_SUMMARY.md  check_db.py  check_db_assuntos.py  consulta_formatos_resultado.json  fix_migration.py  pyproject.toml  relatorio backend.md  test_compression_cache_simple.py  test_dashboard_implementation.py  test_optimizations.py  test_rate_limit_integration.py  test_rate_limit_manual.py  test_rate_limit_simple.py  witalo.md
backend/alembic/: README  env.py
backend/alembic/versions/: 07aa6fd2ba78_final_initial_schema.py  451eb7fb5987_add_certificados_digitais.py  57c5d51be3d2_add_email_verification_to_user.py  a084d486203a_add_worker_scheduler_and_agent_logs.py  a2b3c4d5e6f7_add_peticoes_tables.py  add_super_admin_system.py  b1c2d3e4f5a6_add_user_profile_and_integrations.py
backend/app/: config.py  main.py
backend/app/ai/: README.md
backend/app/ai/agents/: base_agent.py  investigator.py  maestro.py  triage.py  writer.py
backend/app/ai/providers/: litellm_config.py  provider_manager.py
backend/app/ai/workflows/: legal_translator.py  morning_briefing.py
backend/app/api/v1/: notifications.py  router.py  websocket.py
backend/app/api/v1/endpoints/: admin.py  audit.py  auth.py  casos_oab.py  certificados.py  clients.py  contratos.py  dashboard.py  financeiro.py  health.py  integrations.py  leads.py  metrics.py  peticoes.py  pje.py  processos.py  processos_monitorados.py  profile.py  storage.py  tpu.py  tribunais.py  webhooks.py
backend/app/core/: crypto.py  logging.py  metrics.py  shutdown.py
backend/app/core/auth/: __init__.py  dependencies.py  jwt.py
backend/app/core/middleware/: RATE_LIMITING.md  __init__.py  audit.py  cache.py  compression.py  logging.py  metrics.py  rate_limit.py  security.py  shutdown.py  tenant.py
backend/app/core/services/: audit_service.py  caso_oab_service.py  chatwit_client.py  chatwit_tags.py  cobranca_service.py  contrato_service.py  email_service.py  financeiro_service.py  instagram_oauth.py  oab_finder_service.py  scraper_client.py  storage.py
backend/app/core/services/crm/: __init__.py  lead_scorer.py  (+4 more)
backend/app/db/: __init__.py  base.py  engine.py
backend/app/db/models/: __init__.py  agent_execution_log.py  ai_conversation.py  ai_provider.py  audit_log.py  automation.py  briefing.py  case_movement.py  caso_oab.py  certificado_digital.py  client.py  client_automation.py  client_note.py  cobranca.py  contrato.py  event.py  fatura.py  lancamento.py  lead.py  legal_case.py  notification.py  oab_sync_config.py  peticao.py  processo_monitorado.py  scrape_job.py  tag.py  tenant.py  timeline_embedding.py  timeline_event.py  tpu.py  user.py  user_integration.py  user_preference.py  worker_schedule.py
backend/app/db/repositories/: __init__.py  ai_provider_repository.py  audit_log_repository.py  base.py  case_movement.py  caso_oab.py  certificado_digital.py  client.py  client_automation.py  client_note.py  cobranca.py  contrato.py  fatura.py  lancamento.py  lead.py  legal_case.py  optimized_base.py  optimized_client.py  optimized_legal_case.py  peticao.py  processo_monitorado.py  scrape_job.py  tenant.py  user.py  user_integration_repository.py  user_repository.py
backend/app/schemas/: __init__.py  admin.py  auth.py  caso_oab.py  certificado.py  chatwit.py  client.py  contrato.py  fatura.py  financeiro.py  lead.py  peticao.py  profile.py
backend/app/services/: cache_service.py  notification_service.py
backend/app/workers/: IMPLEMENTATION_SUMMARY.md  README.md  broker.py  main.py  scheduler.py
backend/app/workers/events/: __init__.py  bus.py  types.py
backend/app/workers/tasks/: __init__.py  base.py  chatwit_handlers.py  contratos.py  datajud_poller.py  embeddings.py  funnel_automations.py  lead_scoring.py  oab_sync.py  peticao_protocolar.py  scrape_pipeline.py  tpu_sync.py
backend/cli/: __init__.py  seed.py
backend/db/seeds/: README.md  ai_config.py  crm.py  legal_cases.py  tenant.py
backend/examples/: semantic_search_example.py
backend/scripts/: consultar_processos_reais.py  create_super_admin.py  db_prepare.py  probe_tribunais.py  sync_tpu.py  test_oab_scraper.py  testar_consulta_formatos.py  testar_envio_trf1.py
backend/tests/: conftest.py
backend/tests/integration/: test_chatwit_integration.py  test_compression_cache.py  test_datajud_integration.py  test_event_bus.py  test_event_bus_integration.py  test_graceful_shutdown.py  test_rate_limiting.py  test_webhook_integration.py
backend/tests/performance/: test_hnsw_performance.py
backend/tests/unit/: test_security.py
scraper/: debug_trf1.py  pyproject.toml
scraper/app/: browser_pool.py  config.py  main.py  s3_client.py  schemas.py
scraper/app/data/: comarcas_trf1.json  pje_cadastro_dados.py
scraper/app/scrapers/: base.py  coletar_comarcas.py  pje_generic.py  pje_peticionamento.py  trf1.py
scraper/docs/: Amanda Alves de Sousa_07071649316.pfx
scraper/scripts/: debug_peticao_avulsa.py  explore_a4j_debug.py  explore_juntar_docs.py  explore_peticionar.py  explore_peticionar2.py  explore_peticionar3.py  explore_pje.py  explore_popup.py  explore_upload.py  investigar_otp.py  investigar_signaturedata.py  investigar_signaturedata_v2.py  investigar_sso.py  investigar_sso_v2.py  login_and_export.py  login_pje_final.py  testar_login_array.py  testar_login_completo.py  testar_login_md5.py  testar_login_pje.py  testar_login_requests.py  testar_login_session.py  testar_peticionamento_v2.py  testar_pkipath.py
(+182 files in other folders)
