[tool.poetry]
name = "jusmonitoria-backend"
version = "0.1.0"
description = "JusMonitorIA CRM Orquestrador - Backend API"
authors = ["JusMonitorIA Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.133.1"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.31.0"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^5.0.0"
python-multipart = "^0.0.22"
taskiq = "^0.12.0"
taskiq-redis = "^1.2.0"
langchain = "^1.2.0"
langchain-openai = "^1.1.0"
langchain-anthropic = "^1.3.0"
langgraph = "^1.0.0"
litellm = "^1.81.0"
pgvector = "^0.4.0"
redis = "^7.2.0"
httpx = "^0.28.0"
structlog = "^25.5.0"
prometheus-client = "^0.24.0"
python-dotenv = "^1.0.0"
click = "^8.1.7"
faker = "^40.5.0"
cryptography = "^46.0.0"
croniter = "^6.0.0"
zeep = "^4.2.1"
pyhanko = "^0.25.0"
Pillow = "^11.0"
pdf2image = "^1.17"
requests = "^2.32.0"
unidecode = "^1.3.8"
aiosmtplib = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.12.0"
hypothesis = "^6.92.0"
ruff = "^0.15.0"
mypy = "^1.8.0"
black = "^26.1.0"
isort = "^8.0.0"
ipython = "^9.10.0"

# Poetry script entry points removed

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
