[tool.poetry]
name = "jusmonitoria-scraper"
version = "0.1.0"
description = "JusMonitorIA - Isolated Web Scraper Service"
authors = ["JusMonitorIA Team"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
playwright = "1.58.0"
playwright-stealth = "^1.0.6"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
structlog = "^25.1.0"
aiofiles = "^24.1.0"
setuptools = ">=69.0,<71"
boto3 = "^1.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
